# korridor

./: .gitignore  First Steps with Manim.ipynb  Korridor.ipynb  myManim.ipynb  pyproject.toml
